# signature-processing

./: .gitignore  CMakeLists.txt  build-test-centos.sh  build-test.sh  package.sh  readme.md
include/: base64.h  cvt_buf_bmp.h  cvt_mat2bmp.hpp
signature-processing-cpp/: run.sh
signature-processing-cpp/include/: signature_processing.hpp
signature-processing-cpp/src/: base64.c  cvt_buf_bmp.c
signature-processing-py/: requirements.txt  signature_processing.ipynb
src/: cvt_mat2bmp.cpp  main.cpp  signature_processing.cpp
